Fix some correctness issues in mailnews/compose
Categories
(MailNews Core :: Composition, defect)
Tracking
(Not tracked)
People
(Reporter: Yury.Ivanovich, Assigned: Yury.Ivanovich)
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/122.0.0.0 Safari/537.36
Steps to reproduce:
I will attach patches for the issues found.
The fix in https://hg.mozilla.org/comm-central/rev/8aa30c8f177d#l1.12 wasn't correct.
An empty recipient shouldn't be forced to NS_ERROR_ILLEGAL_LOCALPART with a missing error insert in
There are non-ASCII characters in the local part of the recipient address %s and your server does not support SMTPUTF8.
Updated•11 months ago
|
Nowhere was stated that the string parameters of nsISmtpService.sendMailMessage() had to be URI encoded.
Depends on D204591
Updated•10 months ago
|
Pushed by daniel@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/d5d76aafaf5a
Fix expectation of test_sendMailAddressIDN.js. r=mkmelin
https://hg.mozilla.org/comm-central/rev/4be2283d00a2
Switch some APIs in nsISmtpService to AUTF8String and remove needless decodeURIComponent/encodeURIComponent. r=mkmelin
Description
•