Bug 1885285 - Switch some APIs in nsISmtpService to AUTF8String and remove needless decodeURIComponent/encodeURIComponent. r=mkmelin

Nowhere was stated that the string parameters of nsISmtpService.sendMailMessage() had to be URI encoded.

Differential Revision: https://phabricator.services.mozilla.com/D204592

--HG--
extra : amend_source : cc962000c8b45f3a2ee46fdda61e1153a15730ab